<resources>
    <string name="app_name">Intentapp</string>
    <string name="btn_profile">Profile</string>
    <string name="btn_product">Produk</string>
    <string name="btn_parcelable">Activity With Parcelable</string>
    <string name="btn_implicit">Implicit Intent</string>
    <string name="btn_result">Intent With Result</string>
    <string name="profile_name">RIZKI GUSMIANTO</string>
    <string name="email_profil">rskigus10@gmail.com</string>
    <string name="count_pencapaian">174</string>
    <string name="profile_pencapaian">Pencapaian</string>
    <string name="count_teman">100</string>
    <string name="profile_teman">Teman</string>
    <string name="btn_back">Kembali</string>
    <string name="lbl_produk">Produk</string>
    <string name="text_nama">TextView</string>
    <string name="lbl_brt">Berat</string>
    <string name="txt_berat">TextView</string>
    <string name="lbl_detail">Detail</string>
    <string name="txt_detail">TextView</string>
    <string name="btn_kembail">Kembali</string>
    <string name="count_foto">6 Foto</string>
    <string name="harga_produk">Rp.1.500.000</string>
    <string name="nama_produk">Gitar listrik promo 12:12 FLASH SALE dengan kualitas terbaik</string>
    <string name="nm_produk">Produk</string>
    <string name="isi_produk">textview</string>
    <string name="berat_produk">Berat</string>
    <string name="isi_berat">textview</string>
    <string name="detail_produk">Detail</string>
    <string name="isi_detail">textview</string>
    <string name="todo">TODO</string>
    <string name="btn_kembali">Kembali</string>
    <string name="data_terjual">| 4.3RB Terjual</string>
</resources>