<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

      <ImageView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:src="@drawable/gitar"
          android:scaleType="fitXY"
          android:adjustViewBounds="true"
          android:contentDescription="@string/todo" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="#4D000000"
          android:text="@string/count_foto"
          android:textSize="18sp"
          android:padding="8dp"
          android:drawablePadding="8dp"
          android:textColor="@color/white"
          android:layout_marginBottom="16dp"
          android:layout_marginStart="16dp"
          android:layout_gravity="bottom"
          app:drawableStartCompat="@android:drawable/ic_menu_gallery" />
    </FrameLayout>

    <TextView
        android:id="@+id/nama_produk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/nama_produk"
        android:textColor="#090909"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/produk_harga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/harga_produk"
        android:textColor="#FF0303"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <ImageView
          android:id="@+id/img_1"
          android:layout_width="15dp"
          android:layout_height="15dp"
          android:layout_marginStart="14dp"
          android:layout_marginBottom="10dp"
          android:src="@drawable/star"
          android:contentDescription="TODO" />

      <ImageView
          android:id="@+id/img_2"
          android:layout_width="15dp"
          android:layout_height="15dp"
          android:layout_marginStart="14dp"
          android:layout_marginBottom="10dp"
          android:src="@drawable/star"
          android:contentDescription="TODO" />
      <ImageView
          android:id="@+id/img_3"
          android:layout_width="15dp"
          android:layout_height="15dp"
          android:layout_marginStart="14dp"
          android:layout_marginBottom="10dp"
          android:src="@drawable/star"
          android:contentDescription="TODO" />
      <ImageView
          android:id="@+id/img_4"
          android:layout_width="15dp"
          android:layout_height="15dp"
          android:layout_marginStart="14dp"
          android:layout_marginBottom="10dp"
          android:src="@drawable/star"
          android:contentDescription="TODO" />
      <ImageView
          android:id="@+id/img_5"
          android:layout_width="15dp"
          android:layout_height="15dp"
          android:layout_marginStart="14dp"
          android:layout_marginBottom="30dp"
          android:src="@drawable/halfstar"
          android:contentDescription="TODO" />

      <TextView
          android:id="@+id/star_rating"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingLeft="15dp"
          android:text="4.6"
          android:textColor="#0B0B0B"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/star_terjual"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingStart="20dp"
          android:text="@string/data_terjual"
          android:textColor="#0B0B0B"
          android:textStyle="bold"
          />

      <ImageView
          android:id="@+id/img_6"
          android:layout_width="20dp"
          android:layout_height="20dp"
          android:layout_marginStart="30dp"
          android:layout_marginBottom="10dp"
          android:src="@drawable/love"
          />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

      <ImageView
          android:id="@+id/img_7"
          android:layout_width="85dp"
          android:layout_height="85dp"
          android:layout_marginLeft="3dp"
          android:layout_marginBottom="10dp"
          android:src="@drawable/cod"
          android:contentDescription="TODO" />

      <TextView
          android:id="@+id/star_cod"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="36dp"
          android:paddingLeft="20dp"
          android:text="COD (bayar ditempat)"
          android:textColor="#0B0B0B"
          android:textStyle="bold"
          />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:orientation="horizontal">


      <TextView
          android:id="@+id/produk"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="4"
          android:text="@string/nm_produk"
          android:textColor="#73F83B"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/txt_nama"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/isi_produk"
          android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/berat"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="4"
          android:text="@string/berat_produk"
          android:textColor="#73FF37"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/txt_berat"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/isi_berat"
          android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/produk_detail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="4"
          android:text="@string/detail_produk"
          android:textColor="#5EFB42"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/txt_detail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/isi_detail"
          android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="330dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#7AF645"
        android:text="@string/btn_kembali"
        android:textColor="#0C0C0C" />
  </LinearLayout>
</ScrollView>